--- a/src/styles/elements/_index.css
+++ b/src/styles/elements/_index.css
@@ -1,6 +1,6 @@
 @import './StructureTags.module.css';
 
-/* @import './TextSementicTags.module.css'; */
+@import './TextSementicTags.module.css';
 
 /* @import './FormAndControlTags.module.css'; */
 
