--- a/src/styles/settings/_index.css
+++ b/src/styles/settings/_index.css
@@ -1,13 +1,14 @@
 @import './Colors.module.css';
 
-@import './Breakpoins.css';
+/* @import './Breakpoins.css'; */
+
+@import './Typography.module.css';
 
 /* @import './Animations.module.css';
 @import './borders.module.css';
 @import './Easing.module.css';
-@import './Fonts.module.css';
 @import './Gradients.module.css';
 @import './Shadows.module.css';
 @import './Sizes.module.css';
-@import './Typography.module.css';
-@import './Z_index.module.css'; */
+
+/* @import './Z_index.module.css'; */
