--- a/src/components/atomic/Item/Item.module.css
+++ b/src/components/atomic/Item/Item.module.css
@@ -1,9 +1,9 @@
 .item {
-	font-weight: 600;
-	color: var(--background-body);
+	& > a {
+		color: var(--color-text-headers);
+	}
 
 	&:hover {
 		cursor: pointer;
-		text-shadow: 0 0 0.9375rem var(--background-body);
 	}
 }
