--- a/src/components/atomic/ThemeOptions/ThemeOptions.module.css
+++ b/src/components/atomic/ThemeOptions/ThemeOptions.module.css
@@ -6,6 +6,9 @@
 	padding: 0;
 	border: none;
 	background-color: transparent;
+	color: var(--color-text-headers);
+	cursor: pointer;
+	transform: scale(1.2);
 }
 
 .option__box {
@@ -13,10 +16,10 @@
 	right: 0;
 	top: 0;
 	width: max-content;
-	margin: 0.0625rem;
-	padding: 0 0.625rem;
+	margin: 1px;
+	padding: 0;
 	border-radius: 0.375rem;
-	background-color: var(--header-bg-color);
+	background-color: var(--blue-100);
 	transform: translate(50%, 2.1875rem);
 	list-style-type: none;
 }
