--- a/src/components/atomic/Header/Header.module.css
+++ b/src/components/atomic/Header/Header.module.css
@@ -3,10 +3,13 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 1.875rem;
-	background-color: var(--header-bg-color);
+	background-color: var(--blue-100);
+}
+
+.header__tilte {
+	color: var(--color-text-headers);
 }
 
 .header__itemSection {
 	display: flex;
-	justify-content: end;
 }
