style: ItemTheme #modify hover color
se modifica el hover del componente ItemTheme
* se agrega un nuevo color y se comodan las variables

--- a/src/styles/settings/Colors.module.css
+++ b/src/styles/settings/Colors.module.css
@@ -1,8 +1,12 @@
 :root {
 	/* Colors conts */
+	/* gray */
 	--gray-100: #f8f9fa;
-	--blue-100: #4169e1;
 
-	/* Colors referens */
+	/* blue */
+	--blue-100: #4169e1;
+	--blue-200: #1e43b0;
+
+	/* ================ Colors referens ====================*/
 	--color-text-headers: var(--gray-100);
 }
